tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `modular_bitfield::checks::False: modular_bitfield::checks::DiscriminantInRange` is not satisfied
  --> $DIR/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `modular_bitfield::checks::DiscriminantInRange` is not implemented for `modular_bitfield::checks::False`

For more information about this error, try `rustc --explain E0277`.
